bugs fixed - overflow-x: hidden in container added

--- a/assets/css/trafficPlan.css
+++ b/assets/css/trafficPlan.css
@@ -4,6 +4,7 @@
     padding: 0;
     height: 100vh;
     position: relative;
+    overflow-x: hidden;
 }
 
 .disp-flex {
